Sticky footer fixed, reformatted css for Layout component to wrap content

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,3 +1,13 @@
+.container {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .main {
   margin: 5rem auto;
   width: 90%;
@@ -6,16 +16,11 @@
 
 .footer {
   width: 100%;
-  height: 100px;
+  position: fixed;
+  bottom: 0;
   border-top: 1px solid #eaeaea;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  padding: 0 1rem;
 }
